--- a/usr/src/lib/libdtrace/common/procfs.sed.in
+++ b/usr/src/lib/libdtrace/common/procfs.sed.in
@@ -56,6 +56,7 @@ SED_REPLACE(TS_RUN)
 SED_REPLACE(TS_ONPROC)
 SED_REPLACE(TS_ZOMB)
 SED_REPLACE(TS_STOPPED)
+SED_REPLACE(TS_WAIT)
 
 SED_REPLACE(P_PR_FORK)
 SED_REPLACE(P_PR_RUNLCL)
@@ -75,6 +76,7 @@ SED_REPLACE(SZOMB)
 SED_REPLACE(SSTOP)
 SED_REPLACE(SIDL)
 SED_REPLACE(SONPROC)
+SED_REPLACE(SWAIT)
 
 SED_REPLACE(CLDNOSIGCHLD)
 SED_REPLACE(CLDWAITPID)
