6518277 need a common IPMI library 6518283 generic mechanism for detecting SP resets

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -330,6 +330,7 @@ COMMON_SUBDIRS = \
 	lib/libinetcfg \
 	lib/libinetsvc \
 	lib/libinetutil \
+	lib/libipmi \
 	lib/libipmp \
 	lib/libipp \
 	lib/libipsecutil \
