--- a/usr/src/cmd/fm/modules/i86pc/sfx4500-disk/Makefile
+++ b/usr/src/cmd/fm/modules/i86pc/sfx4500-disk/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -28,11 +28,11 @@ MODULE = sfx4500-disk
 CLASS = arch
 ARCH = i86pc
 SRCS = sfx4500-disk.c diskmon_conf.c topo_gather.c \
-	fault_mgr.c hotplug_mgr.c ipmi_plugin.c \
-	plugin_mgr.c schg_mgr.c fault_analyze.c scsi_util.c util.c
+	fault_mgr.c hotplug_mgr.c dm_platform.c \
+	schg_mgr.c fault_analyze.c scsi_util.c util.c
 
 include ../../Makefile.plugin
 LINTFLAGS += -I. -I$(SRC)/lib/fm/topo/modules/i86pc/sata -L$(ROOT)/usr/lib/fm
 CFLAGS += -I. -I$(SRC)/lib/fm/topo/modules/i86pc/sata
-LDLIBS += -lsysevent -lnvpair -lsmbios -lcfgadm -ltopo -luutil
+LDLIBS += -lsysevent -lnvpair -lsmbios -lcfgadm -ltopo -luutil -lipmi
 LDFLAGS += -L$(ROOT)/usr/lib/fm -R/usr/lib/fm
