--- a/usr/src/lib/libipmi/sparcv9/Makefile
+++ b/usr/src/lib/libipmi/sparcv9/Makefile
@@ -18,22 +18,13 @@
 #
 # CDDL HEADER END
 #
-
 #
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
-#
+#ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = cpumem-retire		\
-	eversholt		\
-	io-retire		\
-	ip-transport		\
-	snmp-trapgen		\
-	sp-monitor		\
-	syslog-msgs		\
-	zfs-diagnosis		\
-	zfs-retire
+include ../Makefile.com
+include ../../Makefile.lib.64
 
-include ../../Makefile.subdirs
+install: all $(ROOTLIBS64) $(ROOTLINKS64)
