--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -239,6 +239,7 @@ DRV_KMODS	+= rpcib
 DRV_KMODS	+= vni
 DRV_KMODS	+= xge
 DRV_KMODS	+= rds
+DRV_KMODS	+= chxge
 
 #
 # Don't build some of these for OpenSolaris, since they will be
@@ -287,7 +288,6 @@ DRV_KMODS	+= dad
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= audioens
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= audiovia823x
-$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= chxge
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= ifp
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= scsi_vhci
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= uata
