--- a/usr/src/uts/sparc/si3124/Makefile
+++ b/usr/src/uts/sparc/si3124/Makefile
@@ -19,7 +19,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -115,6 +115,7 @@ TEST		= test
 SD_FILES = $(SD_OBJS:%.o=../sd/%.ll)
 SATA_FILES = $(SATA_OBJS:%.o=-l ../sata/%.ll)
 SCSI_FILES = $(SCSI_OBJS:%.o=-l ../scsi/%.ll)
+CMLB_FILES = $(CMLB_OBJS:%.o=-l ../cmlb/%.ll)
  
 warlock: $(WARLOCK_OK)
 
@@ -122,10 +123,11 @@ warlock: $(WARLOCK_OK)
 	cd $(WLCMD_DIR); $(TEST) -f $@  || $(SCCS) get $@
 
 $(WARLOCK_OK): si3124.wlcmd $(WARLOCK_OUT)  warlock_ddi.files \
-	sata.files scsi.files sd.files
+	sata.files scsi.files sd.files cmlb.files
 	$(WARLOCK) -c $(WLCMD_DIR)/si3124.wlcmd $(WARLOCK_OUT) \
 	$(SD_FILES) \
 	$(SCSI_FILES) \
+	$(CMLB_FILES) \
         $(SATA_FILES) \
 	-l ../warlock/ddi_dki_impl.ll
 	$(TOUCH) $@
@@ -141,6 +143,9 @@ scsi.files:
 
 sd.files: 
 	@cd ../sd; pwd; $(MAKE) warlock_alone
+
+cmlb.files:
+	@cd ../cmlb; pwd; $(MAKE) warlock
 
 warlock_ddi.files:
 	@cd ../warlock; pwd; $(MAKE) warlock
