--- a/usr/src/lib/libc/amd64/Makefile
+++ b/usr/src/lib/libc/amd64/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -785,6 +785,7 @@ PORTSYS=			\
 	execl.o			\
 	execle.o		\
 	execv.o			\
+	faccessat.o		\
 	fcntl.o			\
 	fsmisc.o		\
 	fstatat.o		\
