6292171 on_trap and on_fault protection leaks to high pil interrupt handlers

--- a/usr/src/uts/sun4/ml/offsets.in
+++ b/usr/src/uts/sun4/ml/offsets.in
@@ -1,5 +1,5 @@
 \ offsets.in: input file to produce assym.h using the stabs program
-\ Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+\ Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 \ Use is subject to license terms.
 \
 \ CDDL HEADER START
@@ -373,6 +373,9 @@ cpu	CPUSIZE
 	cpu_m.intrcnt			CPU_INTRCNT
 	cpu_m.tmp1			CPU_TMP1
 	cpu_m.tmp2			CPU_TMP2
+	cpu_m.ofd			CPU_OFD
+	cpu_m.lfd			CPU_LFD
+	cpu_m.otd			CPU_OTD
 	cpu_m.mpcb			CPU_MPCB
 	cpu_m.cpu_private		CPU_PRIVATE
 	cpu_m.cpu_mmu_idx		CPU_MMU_IDX
