--- a/usr/src/uts/i86pc/Makefile
+++ b/usr/src/uts/i86pc/Makefile
@@ -42,9 +42,10 @@ INTEL_LIB_DIR	 = $(UTSBASE)/intel/lint-libs/$(OBJS_DIR)
 
 INTEL_LINTS	 = genunix
 
+LINT_PARALLEL_KMODS	= $(PARALLEL_KMODS:nxge=)
 LINT_LIBS	 = $(LINT_LIB) \
 		   $(GENUNIX_KMODS:%=$(LINT_LIB_DIR)/llib-l%.ln) \
-		   $(PARALLEL_KMODS:%=$(LINT_LIB_DIR)/llib-l%.ln) \
+		   $(LINT_PARALLEL_KMODS:%=$(LINT_LIB_DIR)/llib-l%.ln) \
 		   $(CLOSED_KMODS:%=$(LINT_LIB_DIR)/llib-l%.ln) \
 		   $(INTEL_LINTS:%=$(INTEL_LIB_DIR)/llib-l%.ln)
 
