--- a/usr/src/uts/sun4v/sys/Makefile
+++ b/usr/src/uts/sun4v/sys/Makefile
@@ -97,29 +97,6 @@ CLOSED_HDRS=	\
 	memtestio_n2.h		\
 	memtestio_v.h
 
-NXGEHDRS=			\
-	nxge.h			\
-	nxge_common.h		\
-	nxge_common_impl.h	\
-	nxge_defs.h		\
-	nxge_hw.h		\
-	nxge_impl.h		\
-	nxge_ipp.h		\
-	nxge_ipp_hw.h		\
-	nxge_mac.h		\
-	nxge_mac_hw.h		\
-	nxge_fflp.h		\
-	nxge_fflp_hw.h		\
-	nxge_mii.h		\
-	nxge_rxdma.h		\
-	nxge_rxdma_hw.h		\
-	nxge_txc.h		\
-	nxge_txc_hw.h		\
-	nxge_txdma.h		\
-	nxge_txdma_hw.h		\
-	nxge_virtual.h		\
-	nxge_espc.h
-
 ROOTHDRS=		$(HDRS:%=$(USR_PSM_ISYS_DIR)/%)
 $(CLOSED_BUILD)ROOTHDRS += $(CLOSED_HDRS:%=$(USR_PSM_ISYS_DIR)/%)
 
@@ -133,8 +110,7 @@ ROOTLINK=		$(ROOTDIR)/uts/$(PLATFORM)/sys
 LINKDEST=		../../../../platform/$(PLATFORM)/include/sys
 
 CHECKHDRS=		$(HDRS:%.h=%.check) \
-			$(SUN4_HDRS:%.h=%.cmncheck)	\
-			$(NXGEHDRS:%.h=nxge/%.check)
+			$(SUN4_HDRS:%.h=%.cmncheck)
 
 $(CLOSED_BUILD)CHECKHDRS +=			\
 	$(CLOSED_HDRS:%.h=%.check)		\
