--- a/usr/src/uts/sparc/spppcomp/Makefile
+++ b/usr/src/uts/sparc/spppcomp/Makefile
@@ -21,7 +21,7 @@
 #
 # uts/sparc/spppcomp/Makefile
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -99,6 +99,13 @@ modlintlib:	$(MODLINTLIB_DEPS) lint64
 clean.lint:	$(CLEAN_LINT_DEPS)
 
 install:	$(INSTALL_DEPS)
+
+$(LINTS_DIR)/%.ln:		$(UTSBASE)/common/io/ppp/spppcomp/%.c
+	@($(LHEAD) $(LINT.c) $< $(LTAIL))
+
+$(OBJS_DIR)/%.o:		$(UTSBASE)/common/io/ppp/spppcomp/%.c
+	$(COMPILE.c) -o $@ $<
+	$(CTFCONVERT_O)
 
 #
 #	Include common targets.
