6535220 potential complicated library dependency and code duplication between libdladm and its friends (fix msg build)

--- a/usr/src/lib/libdladm/Makefile
+++ b/usr/src/lib/libdladm/Makefile
@@ -35,7 +35,7 @@ SUBDIRS =	$(MACH)
 
 POFILE =	libdladm.po
 MSGFILES =	common/libdladm.c common/linkprop.c common/secobj.c	\
-		common/libdllink.c comon/libdlaggr.c common/libdlwlan.c
+		common/libdllink.c common/libdlaggr.c common/libdlwlan.c
 XGETFLAGS =     -a -x libdladm.xcl
 
 all :=		TARGET = all
