PSARC/2007/124 Strong Type-Checking for VFS Operation Registration Mechanism 6505923 Need better type checking for vnodeops 6531594 lxpr_readlink() is missing the "cred_t *cr" arg 6532559 vfs_strayops does not use the vnode/vfs operation registration mechanism

--- a/usr/src/uts/common/sys/Makefile
+++ b/usr/src/uts/common/sys/Makefile
@@ -479,7 +479,7 @@ CHKHDRS=			\
 	syscall.h		\
 	sysconf.h		\
 	sysconfig.h		\
-	sysevent.h	\
+	sysevent.h		\
 	sysevent_impl.h         \
 	sysinfo.h		\
 	syslog.h		\
@@ -546,6 +546,7 @@ CHKHDRS=			\
 	var.h			\
 	varargs.h		\
 	vfs.h			\
+	vfs_opreg.h		\
 	vfstab.h		\
 	vgareg.h		\
 	videodev2.h		\
