--- a/usr/src/lib/libshare/nfs/i386/Makefile
+++ b/usr/src/lib/libshare/nfs/i386/Makefile
@@ -21,10 +21,10 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 
 include ../Makefile.com
 
-install: all
+install: all $(ROOTLIBS) $(ROOTLINKS)
